--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "node-auth",
   "private": true,
   "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./bin/www"
+  },
   "dependencies": {
     "bcrypt-nodejs": "latest",
     "body-parser": "~1.15.2",
